# src/gen/java/io/swagger/api/AuthenticationApiService.java
@@ -1,0 +1,20 @@
+package io.swagger.api;
+
+import io.swagger.api.*;
+import io.swagger.model.*;
+
+import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
+
+
+import java.util.Map;
+import java.util.List;
+import io.swagger.api.NotFoundException;
+
+import java.io.InputStream;
+
+import javax.ws.rs.core.Response;
+import javax.ws.rs.core.SecurityContext;
+import javax.validation.constraints.*;
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJerseyServerCodegen", date = "2021-01-20T15:13:44.667Z[GMT]")public abstract class AuthenticationApiService {
+    public abstract Response authenticate(List<String> body,SecurityContext securityContext) throws NotFoundException;
+}
